--- a/exercises.html
+++ b/exercises.html
@@ -38,39 +38,43 @@
 
     <!-- EX3 -->
     <h3>Example(3): Blue Every 3 Boxes , Start From "3"</h3>
-    <table>
-        <tr>
-                <td>.</td>
-                <td>.</td>
-                <td>.</td>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-                <td>.</td>
-                <td>.</td>
-                <td>.</td>
-                
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-                <td>.</td>
-                <td>.</td>
-                <td>.</td>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-                
-                <td>.</td>
-                <td>.</td>
-                <td>.</td>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-                <td>.</td>
-                <td>.</td>
-                <td>.</td>
-        </tr>
-    </table>
+    <span>
+        <span>
+        <span>1</span>
+        <span>2</span>
+        <span>3</span>
+        <span>4</span>
+        <span>5</span>
+        <span>6</span>
+        <span>7</span>
+        <span>8</span>
+        <span>9</span>
+        <br>
+        </span>
+        <span>
+            <span>10</span>
+            <span>11</span>
+            <span>12</span>
+            <span>13</span>
+            <span>14</span>
+            <span>15</span>
+            <span>16</span>
+            <span>17</span>
+            <span>18</span>
+            <br>
+        </span>
+        <span>
+            <span>19</span>
+            <span>20</span>
+            <span>21</span>
+            <span>22</span>
+            <span>23</span>
+            <span>24</span>
+            <span>25</span>
+            <span>26</span>
+            <span>27</span>
+        </span>
+        </span> 
 
     <!-- EX4 -->
     <br><br><hr>
